# figmark

./: .coverage  .dockerignore  .env.example  .gitignore  .hadolint.yaml  .trivyignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  compose.deploy.yaml  compose.test.yaml  compose.yaml  config.example.yaml  config.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: automerge.yml  ci.yml  codeql.yml  dependabot-automerge.yml  release.yml  security.yml
compose/: config.test.yaml
docs/: README.md  architecture.md  deployment.md  eval-report-2026-06-11.md
docs/tickets/: README.md  T-001-vector-diagrams-missed.md  T-002-misleading-filtered-image-log.md  T-003-parallel-image-description.md  T-004-tagged-pdf-pdfua.md  T-005-pdf-annotations.md  T-006-text-context-around-images.md  T-007-description-language-follows-document.md  T-008-diagram-internal-text-leaks-into-body.md  T-009-starlette-badhost-cve.md  T-010-provider-agnostic-llm-key.md  T-011-codeql-sast.md  T-012-dependabot.md  T-013-pip-audit-hard-gate.md  T-014-secret-scanning-push-protection.md  T-015-sha-pin-actions.md  T-016-cosign-image-signing.md  T-017-compose-defaults-to-ghcr.md  T-018-first-public-release.md  T-019-repo-cosmetics.md  T-020-remove-berget-fallback.md  T-021-offpage-drawings-crash.md  T-022-diagram-payload-cap.md  T-023-significance-gate-for-diagrams.md  T-024-audit-silent-fallbacks-and-hidden-defaults.md  T-025-selectable-output-format.md  T-026-tables-flattened-to-text.md  T-027-per-page-scan-decision.md  T-028-evaluate-garbled-text-prevalence.md  T-029-report-conversion-cost.md  T-030-labelled-table-bench.md  T-031-conservative-table-extraction.md  T-032-loud-warnings-silenced-under-quiet.md  T-033-truncated-descriptions-undetected.md  T-034-cache-ignores-config.md  T-035-diagram-detection-recall-unmeasured.md  T-036-naive-multicolumn-reading-order.md  T-037-quadratic-drawing-clustering.md  T-038-document-pdf-prompt-injection.md  T-039-dockerfile-base-comment-drift.md  (+45 more)
examples/: README.md  download_eval.py  download_samples.py  run_eval.py
examples/eval/: README.md  manifest.yaml
scripts/: check_doc_drift.py  extract_diagrams_F.py  probe_tables.py
scripts/cache_bench/: BASELINE.md  bench.py
scripts/coverage_bench/: BASELINE.md  coverage.py
scripts/githooks/: pre-commit
scripts/lo_diagram_bench/: bench.py
scripts/recall_bench/: bench.py  download.py
scripts/structure_bench/: bench.py
scripts/table_bench/: bench.py
src/: annotate.py  config.py  context.py  describe.py  diagrams.py  images.py  main.py  ocr.py  output.py  parallel.py  pdf_loader.py
src/figmark/: __init__.py  annotate.py  api.py  boilerplate.py  cache.py  config.py  context.py  describe.py  diagrams.py  images.py  input_formats.py  main.py  ocr.py  ocr_compat.py  office.py  output.py  parallel.py  pdf_loader.py  pipeline.py  structure.py  summarize.py  tables.py  tagged.py  usage.py
tests/: conftest.py  fakes.py  test_annotate.py  test_api_auth.py  test_api_cache.py  test_api_concurrency.py  test_api_convert_offline.py  test_api_e2e_http.py  test_api_format.py  test_api_health.py  test_api_input_gate.py  test_api_ocr_compat.py  test_api_startup_fails_loud.py  test_api_upstream_errors.py  test_api_validation.py  test_boilerplate.py  test_cache_store.py  test_cli_input_gate.py  test_config.py  test_context.py  test_corpus_variety.py  test_describe.py  test_diagrams.py  test_doc_drift.py  test_fail_loud.py  test_fast_text_path.py  test_garble.py  test_images.py  test_input_formats.py  test_mockllm.py  test_ocr_pipeline.py  test_ocr_vision_errors.py  test_office.py  test_office_adversarial.py  test_office_extraction_quality.py  test_office_guardrail.py  test_output.py  test_pdf_loader.py  test_per_page_ocr.py  test_pipeline.py  (+10 more)
tests/docker/: test_compose_config.py  test_compose_e2e.py  test_image_runtime.py  test_release_workflow.py
tests/mockllm/: Dockerfile  app.py
