[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "figmark"
description = "Turn a PDF into Markdown with first-class AI figure descriptions."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Joel Stenberg", email = "l.j.stenberg@gmail.com" }]
keywords = ["pdf", "markdown", "accessibility", "alt-text", "ocr", "vision", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dynamic = ["version"]
dependencies = [
    "PyMuPDF>=1.24.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/joelstenberg/figmark"
Repository = "https://github.com/joelstenberg/figmark"
Issues = "https://github.com/joelstenberg/figmark/issues"

[project.scripts]
figmark = "figmark.main:main"
figmark-server = "figmark.api:main"

[project.optional-dependencies]
# The HTTP service. Kept optional so the CLI/PyPI install stays lean; the
# container image installs ".[server]".
server = [
    "fastapi>=0.119,<1.0",
    # Pin Starlette's floor directly — FastAPI's own floor (>=0.46.0) has left
    # known CVEs unpatched twice (CVE-2025-62727, then CVE-2026-48710/BadHost,
    # fixed in 1.0.1). See docs/tickets/T-009.
    "starlette>=1.0.1,<2.0",
    "uvicorn[standard]>=0.32,<1.0",
    "python-multipart>=0.0.9,<0.1",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "httpx>=0.27",
    "fastapi>=0.119,<1.0",
    # Pin Starlette's floor directly — FastAPI's own floor (>=0.46.0) has left
    # known CVEs unpatched twice (CVE-2025-62727, then CVE-2026-48710/BadHost,
    # fixed in 1.0.1). See docs/tickets/T-009.
    "starlette>=1.0.1,<2.0",
    "uvicorn[standard]>=0.32,<1.0",
    "python-multipart>=0.0.9,<0.1",
]

[tool.hatch.version]
path = "src/figmark/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/figmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "live: runs against the real Berget API (needs BERGET_API_KEY, costs money, takes minutes)",
    "docker: needs a Docker daemon (builds/runs the image or compose); skipped when absent",
]
# Default mode runs EVERYTHING, including live tests — the "run for real" principle.
# For fast iteration without live calls: pytest -m "not live"
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
# FastAPI's dependency-injection idiom puts Depends()/File()/Form() in argument
# defaults — B008 ("no function call in defaults") is a false positive here.
"src/figmark/api.py" = ["B008"]
