[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "figmark"
description = "Turn documents (PDF, EPUB, Office) into Markdown with first-class AI figure descriptions."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Joel Stenberg", email = "l.j.stenberg@gmail.com" }]
keywords = ["pdf", "epub", "office", "docx", "markdown", "accessibility", "alt-text", "ocr", "vision", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dynamic = ["version"]
dependencies = [
    "PyMuPDF>=1.28.0",
    "pytesseract>=0.3.13",
    # Security floor: 12.2.0 carries 9 known CVEs (PYSEC-2026-2255/3451-3454,
    # CVE-2026-54058/59198/59200/59204), all fixed in 12.3.0. pip-audit is a hard
    # CI gate (T-013), so the floor is pinned here rather than left to the resolver.
    "Pillow>=12.3.0",
    "openai>=2.47.0",
    "python-dotenv>=1.2.2",
    "PyYAML>=6.0.3",
    "rich>=15.0.0",
    # PDF/UA structure-tree tagging (T-004). Wheels bundle qpdf — no apt package
    # needed, so the air-gapped image stays self-contained.
    "pikepdf>=10.10.0",
]

[project.urls]
Homepage = "https://github.com/Ztein/figmark"
Repository = "https://github.com/Ztein/figmark"
Issues = "https://github.com/Ztein/figmark/issues"

[project.scripts]
figmark = "figmark.main:main"
figmark-server = "figmark.api:main"

[project.optional-dependencies]
# The HTTP service. Kept optional so the CLI/PyPI install stays lean; the
# container image installs ".[server]".
server = [
    "fastapi>=0.139.2,<1.0",
    # Pin Starlette's floor directly — FastAPI's own floor (>=0.46.0) has left
    # known CVEs unpatched twice (CVE-2025-62727, then CVE-2026-48710/BadHost,
    # fixed in 1.0.1). See docs/tickets/T-009.
    "starlette>=1.3.1,<2.0",
    "uvicorn[standard]>=0.51.0,<1.0",
    "python-multipart>=0.0.32,<0.1",
]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "mypy>=2.3.0",
    "ruff>=0.15.22",
    "httpx>=0.28.1",
    "fastapi>=0.139.2,<1.0",
    # Pin Starlette's floor directly — FastAPI's own floor (>=0.46.0) has left
    # known CVEs unpatched twice (CVE-2025-62727, then CVE-2026-48710/BadHost,
    # fixed in 1.0.1). See docs/tickets/T-009.
    "starlette>=1.3.1,<2.0",
    "uvicorn[standard]>=0.51.0,<1.0",
    "python-multipart>=0.0.32,<0.1",
]

[tool.hatch.version]
path = "src/figmark/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/figmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "live: runs against a real LLM API (needs FIGMARK_API_KEY and a config.yaml, costs money, takes minutes)",
    "docker: needs a Docker daemon (builds/runs the image or compose); skipped when absent",
    "office: needs a local LibreOffice (soffice); the adversarial Office-input suite (T-054)",
]
# Default mode runs EVERYTHING, including live tests — the "run for real" principle.
# For fast iteration without live calls: pytest -m "not live"
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
]

[tool.mypy]
# Type checking is a CI gate (like lint). Third-party deps without stubs
# (fitz/PyMuPDF, pytesseract, pikepdf) are used duck-typed.
files = ["src/figmark"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# BLE001/S110/S112 are the T-067 mechanical guard: a blind `except`, or a
# swallowed exception, in the shipped package is either announced (a loud log
# plus a noqa naming the reason) or it does not merge. Test/bench probe
# helpers legitimately catch everything — exempted below.
select = ["E", "F", "I", "UP", "B", "W", "BLE", "S110", "S112"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "BLE001", "S110", "S112"]
"scripts/*" = ["BLE001", "S110", "S112"]
"examples/*" = ["BLE001", "S110", "S112"]
# FastAPI's dependency-injection idiom puts Depends()/File()/Form() in argument
# defaults — B008 ("no function call in defaults") is a false positive here.
"src/figmark/api.py" = ["B008"]
"src/figmark/ocr_compat.py" = ["B008"]
